Added container scan stage

--- a/microservice/Jenkinsfile
+++ b/microservice/Jenkinsfile
@@ -46,6 +46,17 @@ stages {
             }
         }
 
+    stage('Container Image Scan') {
+        steps {
+            "Container Scan": {
+                sh """
+                    cd /microservice
+                    bash trivy-container-scan.sh
+                """
+            }
+        }
+    }
+
     stage('Docker Build and Push') {
         when {
             expression {
