--- a/microservice/Jenkinsfile
+++ b/microservice/Jenkinsfile
@@ -57,8 +57,7 @@ stages {
                 },
                 "OPA Dockerfile": {
                     sh '''
-                        cd microservice/
-                        docker run --rm -v $(pwd):/project openpolicyagent/conftest test --policy opa-docker-sec.rego Dockerfile 
+                        docker run --rm -v $(pwd):/project openpolicyagent/conftest test --policy opa-docker-sec.rego microservice/Dockerfile 
                     '''
                 }
             )
