Added changes in Jenkinsfile

--- a/microservice/Jenkinsfile
+++ b/microservice/Jenkinsfile
@@ -59,7 +59,7 @@ stages {
                     sh '''
                         cd microservice/
                         pwd
-                        docker run --rm -v $(pwd):/project openpolicyagent/conftest test --policy opa-docker-sec.rego Dockerfile 
+                        docker run --rm -v $(pwd):/project openpolicyagent/conftest test --policy $(pwd)/opa-docker-sec.rego $(pwd)/Dockerfile 
                     '''
                 }
             )
