--- a/microservice/Jenkinsfile
+++ b/microservice/Jenkinsfile
@@ -9,6 +9,9 @@ pipeline {
         DATABASE_NAME = credentials('db_name')
         DATABASE_USER = credentials('db_user')
         DATABASE_PASSWORD = credentials('db_pass')
+        AWS_DEFAULT_REGION = 'us-east-2' 
+        AWS_ACCESS_KEY_ID = credentials('aws_access_key_id')
+        AWS_SECRET_ACCESS_KEY = credentials('aws_secret_access_key')
     }
 stages {
     stage('Github Clone on JenkinsServer') {
@@ -91,6 +94,31 @@ stages {
             }
         }
     }
+
+     stage ('Deploy to Dev K8s') {
+            when {
+                expression {
+                    BRANCH_NAME == "master"
+                }
+            }
+            agent {label 'local'}
+            steps {
+                script {
+                    withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONF')]) {
+                        sh """
+                        export KUBECONFIG=\${KUBECONF}
+                        export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+                        export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+                        export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+                        cd microservice/
+                        aws eks list-clusters
+                        helm upgrade --install --force devopstest helmchart --set nodeimage=${containerRegistry}:""$GIT_COMMIT"" --namespace development
+                        """
+                    }
+                    
+                }
+            }
+        }
 
 
 
