--- a/microservice/Jenkinsfile
+++ b/microservice/Jenkinsfile
@@ -112,7 +112,11 @@ stages {
                         export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
                         cd microservice/
                         aws eks list-clusters
-                        kubectl create namespace development
+                        if kubectl get namespace development > /dev/null 2>&1; then
+                            echo "El namespace ya existe"
+                        else
+                            kubectl create namespace development
+                        fi
                         helm upgrade --install --force devopstest helmchart --set nodeimage=${containerRegistry}:""$GIT_COMMIT"" --namespace development
                         """
                     }
